src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-ofT-dwF1000-dhF500-b-t.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen false\n    open-maximized true\n    open-floating true\n    default-column-width { fixed 1000; }\n    default-window-height { fixed 500; }\n    border { on; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 1000 × 500, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
